Fixed issue with scrollbar

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -202,7 +202,7 @@ table, th {
 }
 
 .md-sidebar--secondary {
-    margin-left: 100%;
+    margin-left: 99%;
 }
 
 .md-main__inner{padding-top: 0rem !important}
